--- a/style.css
+++ b/style.css
@@ -1,5 +1,19 @@
+body {
+  margin: 0;
+}
+
+main {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: white;
+}
+
 .stopwatch {
-  position: absolute;
+  position: relative;
   width: 1000px;
   height: 1000px;
   background: url(./images/the-watch.png);
