--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  background: #e8f1ff;
 }
 
 main {
@@ -8,7 +9,6 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: white;
 }
 
 .stopwatch {
@@ -18,6 +18,7 @@ main {
   background: url(./images/the-watch.png);
   background-size: 900px;
   background-repeat: no-repeat;
+  border-radius: 50%;
 }
 
 .minute-hand {
